Fix #32596: bones in armature created from skin modifier have wrong envelope values.